// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: closed 1`] = `
<div
  className="display-flex-row display-flex-end"
>
  <StatusDescription
    showTitle={true}
    statusOption="FIXED"
  />
  <div
    className="spacer-top"
  >
    <Tooltip
      overlay={null}
      placement="bottom"
    >
      <div
        className="dropdown"
      >
        <Toggler
          closeOnClickOutside={true}
          closeOnEscape={true}
          onRequestClose={[Function]}
          open={false}
          overlay={
            <DropdownOverlay
              noPadding={true}
              placement="bottom"
            >
              <StatusSelection
                hotspot={
                  Object {
                    "assignee": "assignee",
                    "assigneeUser": Object {
                      "active": true,
                      "local": true,
                      "login": "assignee",
                      "name": "John Doe",
                    },
                    "author": "author",
                    "authorUser": Object {
                      "active": true,
                      "local": true,
                      "login": "author",
                      "name": "John Doe",
                    },
                    "canChangeStatus": true,
                    "changelog": Array [],
                    "comment": Array [],
                    "component": Object {
                      "key": "hotspot-component",
                      "longName": "Hotspot component long name",
                      "name": "Hotspot Component",
                      "path": "path/to/component",
                      "qualifier": "FIL",
                    },
                    "creationDate": "2013-05-13T17:55:41+0200",
                    "flows": Array [
                      Object {
                        "locations": Array [
                          Object {
                            "component": "main.js",
                            "textRange": Object {
                              "endLine": 2,
                              "endOffset": 2,
                              "startLine": 1,
                              "startOffset": 1,
                            },
                          },
                        ],
                      },
                    ],
                    "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                    "line": 142,
                    "message": "'3' is a magic number.",
                    "project": Object {
                      "key": "hotspot-component",
                      "longName": "Hotspot component long name",
                      "name": "Hotspot Component",
                      "path": "path/to/component",
                      "qualifier": "TRK",
                    },
                    "resolution": "FIXED",
                    "rule": Object {
                      "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                      "key": "squid:S2077",
                      "name": "That rule",
                      "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                      "securityCategory": "sql-injection",
                      "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                      "vulnerabilityProbability": "HIGH",
                    },
                    "status": "REVIEWED",
                    "textRange": Object {
                      "endLine": 142,
                      "endOffset": 83,
                      "startLine": 142,
                      "startOffset": 26,
                    },
                    "updateDate": "2013-05-13T17:55:42+0200",
                    "users": Array [
                      Object {
                        "active": true,
                        "local": true,
                        "login": "assignee",
                        "name": "John Doe",
                      },
                      Object {
                        "active": true,
                        "local": true,
                        "login": "author",
                        "name": "John Doe",
                      },
                    ],
                  }
                }
                onStatusOptionChange={[Function]}
              />
            </DropdownOverlay>
          }
        >
          <Button
            className="dropdown-toggle big-spacer-left"
            disabled={false}
            id="status-trigger"
            onClick={[Function]}
          >
            <span>
              hotspots.status.select_status
            </span>
            <DropdownIcon
              className="little-spacer-left"
            />
          </Button>
        </Toggler>
      </div>
    </Tooltip>
  </div>
</div>
`;

exports[`should render correctly: open 1`] = `
<div
  className="display-flex-row display-flex-end"
>
  <StatusDescription
    showTitle={true}
    statusOption="FIXED"
  />
  <div
    className="spacer-top"
  >
    <Tooltip
      overlay={null}
      placement="bottom"
    >
      <div
        className="dropdown"
      >
        <Toggler
          closeOnClickOutside={true}
          closeOnEscape={true}
          onRequestClose={[Function]}
          open={true}
          overlay={
            <DropdownOverlay
              noPadding={true}
              placement="bottom"
            >
              <StatusSelection
                hotspot={
                  Object {
                    "assignee": "assignee",
                    "assigneeUser": Object {
                      "active": true,
                      "local": true,
                      "login": "assignee",
                      "name": "John Doe",
                    },
                    "author": "author",
                    "authorUser": Object {
                      "active": true,
                      "local": true,
                      "login": "author",
                      "name": "John Doe",
                    },
                    "canChangeStatus": true,
                    "changelog": Array [],
                    "comment": Array [],
                    "component": Object {
                      "key": "hotspot-component",
                      "longName": "Hotspot component long name",
                      "name": "Hotspot Component",
                      "path": "path/to/component",
                      "qualifier": "FIL",
                    },
                    "creationDate": "2013-05-13T17:55:41+0200",
                    "flows": Array [
                      Object {
                        "locations": Array [
                          Object {
                            "component": "main.js",
                            "textRange": Object {
                              "endLine": 2,
                              "endOffset": 2,
                              "startLine": 1,
                              "startOffset": 1,
                            },
                          },
                        ],
                      },
                    ],
                    "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                    "line": 142,
                    "message": "'3' is a magic number.",
                    "project": Object {
                      "key": "hotspot-component",
                      "longName": "Hotspot component long name",
                      "name": "Hotspot Component",
                      "path": "path/to/component",
                      "qualifier": "TRK",
                    },
                    "resolution": "FIXED",
                    "rule": Object {
                      "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                      "key": "squid:S2077",
                      "name": "That rule",
                      "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                      "securityCategory": "sql-injection",
                      "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                      "vulnerabilityProbability": "HIGH",
                    },
                    "status": "REVIEWED",
                    "textRange": Object {
                      "endLine": 142,
                      "endOffset": 83,
                      "startLine": 142,
                      "startOffset": 26,
                    },
                    "updateDate": "2013-05-13T17:55:42+0200",
                    "users": Array [
                      Object {
                        "active": true,
                        "local": true,
                        "login": "assignee",
                        "name": "John Doe",
                      },
                      Object {
                        "active": true,
                        "local": true,
                        "login": "author",
                        "name": "John Doe",
                      },
                    ],
                  }
                }
                onStatusOptionChange={[Function]}
              />
            </DropdownOverlay>
          }
        >
          <Button
            className="dropdown-toggle big-spacer-left"
            disabled={false}
            id="status-trigger"
            onClick={[Function]}
          >
            <span>
              hotspots.status.select_status
            </span>
            <DropdownIcon
              className="little-spacer-left"
            />
          </Button>
        </Toggler>
      </div>
    </Tooltip>
  </div>
</div>
`;

exports[`should render correctly: readonly 1`] = `
<div
  className="display-flex-row display-flex-end"
>
  <StatusDescription
    showTitle={true}
    statusOption="FIXED"
  />
  <div
    className="spacer-top"
  >
    <Tooltip
      overlay="hotspots.status.cannot_change_status"
      placement="bottom"
    >
      <div
        className="dropdown"
      >
        <Toggler
          closeOnClickOutside={true}
          closeOnEscape={true}
          onRequestClose={[Function]}
          open={false}
          overlay={
            <DropdownOverlay
              noPadding={true}
              placement="bottom"
            >
              <StatusSelection
                hotspot={
                  Object {
                    "assignee": "assignee",
                    "assigneeUser": Object {
                      "active": true,
                      "local": true,
                      "login": "assignee",
                      "name": "John Doe",
                    },
                    "author": "author",
                    "authorUser": Object {
                      "active": true,
                      "local": true,
                      "login": "author",
                      "name": "John Doe",
                    },
                    "canChangeStatus": false,
                    "changelog": Array [],
                    "comment": Array [],
                    "component": Object {
                      "key": "hotspot-component",
                      "longName": "Hotspot component long name",
                      "name": "Hotspot Component",
                      "path": "path/to/component",
                      "qualifier": "FIL",
                    },
                    "creationDate": "2013-05-13T17:55:41+0200",
                    "flows": Array [
                      Object {
                        "locations": Array [
                          Object {
                            "component": "main.js",
                            "textRange": Object {
                              "endLine": 2,
                              "endOffset": 2,
                              "startLine": 1,
                              "startOffset": 1,
                            },
                          },
                        ],
                      },
                    ],
                    "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                    "line": 142,
                    "message": "'3' is a magic number.",
                    "project": Object {
                      "key": "hotspot-component",
                      "longName": "Hotspot component long name",
                      "name": "Hotspot Component",
                      "path": "path/to/component",
                      "qualifier": "TRK",
                    },
                    "resolution": "FIXED",
                    "rule": Object {
                      "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                      "key": "squid:S2077",
                      "name": "That rule",
                      "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                      "securityCategory": "sql-injection",
                      "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                      "vulnerabilityProbability": "HIGH",
                    },
                    "status": "REVIEWED",
                    "textRange": Object {
                      "endLine": 142,
                      "endOffset": 83,
                      "startLine": 142,
                      "startOffset": 26,
                    },
                    "updateDate": "2013-05-13T17:55:42+0200",
                    "users": Array [
                      Object {
                        "active": true,
                        "local": true,
                        "login": "assignee",
                        "name": "John Doe",
                      },
                      Object {
                        "active": true,
                        "local": true,
                        "login": "author",
                        "name": "John Doe",
                      },
                    ],
                  }
                }
                onStatusOptionChange={[Function]}
              />
            </DropdownOverlay>
          }
        >
          <Button
            className="dropdown-toggle big-spacer-left"
            disabled={true}
            id="status-trigger"
            onClick={[Function]}
          >
            <span>
              hotspots.status.select_status
            </span>
            <DropdownIcon
              className="little-spacer-left"
            />
          </Button>
        </Toggler>
      </div>
    </Tooltip>
  </div>
</div>
`;
